# mlir-gccjit

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  check-format.sh  run-lit.py
.github/workflows/: build-gccjit-trunk.yml  build.yml  deploy-docs.yml
cmake/: FindGCCJIT.cmake  FindLLVM.cmake
docs/: Build.md  compatibility.md
include/mlir-gccjit/: CMakeLists.txt  Passes.h  Passes.td
include/mlir-gccjit/Conversion/: Conversions.h  TypeConverter.h
include/mlir-gccjit/IR/: CMakeLists.txt  GCCJITAttrs.h  GCCJITAttrs.td  GCCJITDialect.h  GCCJITDialect.td  GCCJITOps.h  GCCJITOps.td  GCCJITOpsEnums.h  GCCJITTypes.h  GCCJITTypes.td
include/mlir-gccjit/IR/Interfaces/: GCCJITRecordTypeInterface.h  GCCJITRecordTypeInterface.td
include/mlir-gccjit/Translation/: TranslateToGCCJIT.h
src/: CMakeLists.txt  GCCJITAttrs.cpp  GCCJITDialect.cpp  GCCJITOps.cpp  GCCJITTypes.cpp
src/Conversion/: CMakeLists.txt  ConvertArithToGCCJIT.cpp  ConvertControlFlowToGCCJIT.cpp  ConvertFuncToGCCJIT.cpp  ConvertMemrefToGCCJIT.cpp  TypeConverter.cpp
src/Passes/: CMakeLists.txt  MaterializeRValue.cpp
src/Translation/: CMakeLists.txt  Registration.cpp  TranslateToGCCJIT.cpp  TypeTranslation.cpp
src/tools/: CMakeLists.txt
src/tools/gccjit-opt/: CMakeLists.txt  main.cpp
src/tools/gccjit-translate/: main.cpp
test/: lit.cfg.py  lit.site.cfg.py.in
test/compile/: atomic.mlir  expression.mlir  global.mlir  hello_world.mlir  union.mlir  vector.mlir
test/lowering/: alloc.mlir  alloca.mlir  gemm.mlir  global.mlir
test/syntax/: GCCJITOps.cpp  basic.mlir  branch.mlir  extened_asm.mlir  floating_point.mlir  function_attrs.mlir  hello_world.mlir  record.mlir  variables.mlir
tools/gccjit-opt/: CMakeLists.txt  main.cpp
tools/gccjit-translate/: CMakeLists.txt  main.cpp
www/: hugo.toml
www/content/: _index.md
www/content/development/: build.md
